<resources>
    <string name="app_name">Contacts Dialer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_about">About Contacts Dialer</string>
    <string name="about_description">\nThis is a contacts and calling simulator application for entertainment and testing purposes.</string>
    
    <string name="calling">Calling…</string>
    <string name="call_in_progress">Call in progress</string>
    <string name="end_call">End Call</string>
    <string name="mute">Mute</string>
    <string name="speaker">Speaker</string>
    <string name="keypad">Keypad</string>
    <string name="hold">Hold</string>
    <string name="add_call">Add Call</string>
    <string name="video_call">Video Call</string>
    <string name="notes">Notes</string>
    <string name="search_contacts">Search contacts</string>
</resources>
